[gd_scene load_steps=9 format=3 uid="uid://cbgdrvdj6hp6w"]

[ext_resource type="Texture2D" uid="uid://8juek86djmud" path="res://Assets/LoreImages/general_neutral.png" id="1_g3ylx"]
[ext_resource type="Script" path="res://Scenes/DialogLore.gd" id="1_hhwge"]
[ext_resource type="PackedScene" uid="uid://commjrcmkwfx6" path="res://Scenes/DialogBox.tscn" id="2_pbi8r"]
[ext_resource type="AudioStream" uid="uid://dy50fqe552g5v" path="res://OST/general.mp3" id="4_ti3jp"]

[sub_resource type="Animation" id="Animation_6qoa3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_aoj6h"]
resource_name = "down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -125)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DialogBox")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_disabled"
}, {
"args": [false],
"method": &"set_disabled"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DialogBox:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_nt5jc"]
resource_name = "up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -125), Vector2(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DialogBox")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_disabled"
}, {
"args": [false],
"method": &"set_disabled"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DialogBox:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xv331"]
_data = {
"RESET": SubResource("Animation_6qoa3"),
"down": SubResource("Animation_aoj6h"),
"up": SubResource("Animation_nt5jc")
}

[node name="DialogLore" type="Node2D"]
script = ExtResource("1_hhwge")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.833984, 0.833984)
texture = ExtResource("1_g3ylx")
centered = false

[node name="DialogBox" parent="." instance=ExtResource("2_pbi8r")]
visible = false
scene_text_file = "res://Dialogs/before-level1.json"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xv331")
}

[node name="TempTimer" type="Timer" parent="."]

[node name="Theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ti3jp")
volume_db = -6.0
autoplay = true

[connection signal="on_dialog_finished" from="DialogBox" to="." method="_on_dialog_box_on_dialog_finished"]
[connection signal="on_next_line" from="DialogBox" to="." method="_on_dialog_box_on_next_line"]
[connection signal="timeout" from="TempTimer" to="." method="_on_temp_timer_timeout"]
